# emock

./: .gitignore  BuildGuide  CHANGELOG.md  CMakeLists.txt  ExportLite.ps1  HEADER  INSTALL  LICENSE  Makefile  ProjectVar.txt  README  README.md  README_en.md  build.ps1  build.sh  build_install.ps1  build_install4gtest.sh  clean.bat
.semaphore/: semaphore.yml
include/emock/: AfterMatchBuilder.h  AfterMatchBuilder.tcc  AfterMatcher.h  ApiHook.h  ApiHookFunctor.h  ApiHookGenerator.h  ApiHookHolder.h  ApiHookHolderFactory.h  ApiHookKey.h  ApiHookMocker.h  ArgumentsList.h  ArgumentsMacroHelpers.h  ArgumentsMatchBuilder.h  ArgumentsMatchBuilder.tcc  Asserter.h  AssertionFailedError.h  BeforeMatchBuilder.h  BeforeMatchBuilder.tcc  BeforeMatcher.h  CallerMatchBuilder.h  CallerMatchBuilder.tcc  CallerMatcher.h  ChainableMockMethod.h  ChainableMockMethodContainer.h  ChainableMockMethodCore.h  ChainableMockMethodIndexKey.h  ChainableMockMethodKey.h  ChainableMockMethodNameKey.h  ChainableMockObject.h  ChainableMockObjectBase.h  ChainingMockHelper.h  CheckWith.h  Constraint.h  ConstraintSet.h  DecoratedConstraint.h  DefaultBuilder.h  DefaultMatcher.h  DefaultStub.h  DelegatedMethod.h  DelegatedMethodGetter.h  (+118 more)
include/emock/types/: Any.h  AnyBase.h  AnyCast.h  Holder.h  PlaceHolder.h  RefAny.h  RefHolder.h  ValueHolder.h
include/mockcpp/: AfterMatchBuilder.h  AfterMatchBuilder.tcc  AfterMatcher.h  ApiHook.h  ApiHookFunctor.h  ApiHookGenerator.h  ApiHookHolder.h  ApiHookHolderFactory.h  ApiHookKey.h  ApiHookMocker.h  ArgumentsList.h  ArgumentsMacroHelpers.h  ArgumentsMatchBuilder.h  ArgumentsMatchBuilder.tcc  Asserter.h  AssertionFailedError.h  BeforeMatchBuilder.h  BeforeMatchBuilder.tcc  BeforeMatcher.h  CallerMatchBuilder.h  CallerMatchBuilder.tcc  CallerMatcher.h  ChainableMockMethod.h  ChainableMockMethodContainer.h  ChainableMockMethodCore.h  ChainableMockMethodIndexKey.h  ChainableMockMethodKey.h  ChainableMockMethodNameKey.h  ChainableMockObject.h  ChainableMockObjectBase.h  ChainingMockHelper.h  CheckWith.h  CodeModifier.h  Constraint.h  ConstraintSet.h  DecoratedConstraint.h  DefaultBuilder.h  DefaultMatcher.h  DefaultStub.h  DelegatedMethod.h  (+123 more)
include/mockcpp/types/: Any.h  AnyBase.h  AnyCast.h  Holder.h  PlaceHolder.h  RefAny.h  RefHolder.h  ValueHolder.h
src/: AfterMatcher.cpp  Any.cpp  AnyBase.cpp  AnyCast.cpp  ApiHook.cpp  ApiHookKey.cpp  Asserter.cpp  AssertionFailedError.cpp  BeforeMatcher.cpp  CMakeLists.txt  CallerMatcher.cpp  ChainableMockMethodContainer.cpp  ChainableMockMethodCore.cpp  ChainableMockMethodIndexKey.cpp  ChainableMockMethodNameKey.cpp  ChainableMockObject.cpp  ChainableMockObjectBase.cpp  ChainingMockHelper.cpp  CodeModifier.h  ConstraintSet.cpp  DecoratedConstraint.cpp  DefaultMatcher.cpp  DefaultStub.cpp  DelegatedMethodGetter.cpp  DieStub.cpp  DummyApiHook.cpp  Exception.cpp  ExpectsMatcher.cpp  Formatter.cpp  GlobalMockObject.cpp  HookMockObject.cpp  IdentityBuilder.cpp  Ignore.cpp  IgnoreResultHandler.cpp  IgnoreResultHandlerFactory.cpp  IgnoreReturnStub.cpp  InterfaceInfo.cpp  Invocation.cpp  InvocationId.cpp  InvocationMockBuilderGetter.cpp  (+55 more)
src/ports/failure/: cppunit_report_failure.cpp  cpputest_report_failure.cpp  gtest_report_failure.cpp  stdexcept_report_failure.cpp
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt  TestAny.h  TestApiHook.h  TestApiHookBase.h  TestApiHookStdcall.h  TestChainableMockMethod.h  TestChainableMockMethodContainer.h  TestChainableMockMethodNameKey.h  TestChainableObject.h  TestCheck.h  TestConstraintSet.h  TestDelegatedMethod.h  TestDestructorChecker.h  TestEmockSample.h  TestFormatter.h  TestHolder.h  TestIgnoreReturnValue.h  TestIncrementStub.h  TestInterfaceInfo.h  TestInvocation.h  TestInvocationMocker.h  TestIsEqual.h  TestIsStringContains.h  TestIsStringEndWith.h  TestIsStringStartWith.h  TestMethodInfoReader.h  TestMockObject.h  TestMockObject2.h  TestMockcppSample.h  TestNonvirtualMethodMocker.h  TestOverloadMethodMocker.h  TestReturnObjectList.h  TestStaticMethodMocker.h  TestStringConstraint.h  TestStubContainter.h  TestVirtualTable.h  emock-ut  emock-ut.bat  gt.py  mockcpp-ut  (+1 more)
